# L4

./: .gitignore  .gitmodules  Cargo.toml
app/: Cargo.toml  build.rs
app/resources/: dummy.blp  main.blp  main.css  resources.gresource.xml
app/resources/templates/: app_window.blp  page_about.blp  page_games.blp  page_plugins.blp  page_settings.blp  plugin.blp  settings_window.blp
app/resources/templates/models/: game.blp  plugin.blp  setting.blp
app/src/: main.rs  plugins.rs
app/src/archive/: file.rs  file_mut.rs  heap.rs  lockable_file.rs  mod.rs  stream.rs  stream_mut.rs  structs.rs
app/src/archive/structs/: freelist.rs  header.rs  mod.rs  stream.rs  stream_header.rs  string.rs  utils.rs  version.rs
app/src/mmio/: mmap.rs  mod.rs
app/src/modules/: init.rs  inspector.rs  mod.rs  module.rs  module_list.rs  plugins.rs  prelude.rs  registry.rs  theme_picker.rs  title_buttons.rs  ui_postinit.rs  ui_preinit.rs
app/src/modules/meta/: mod.rs  module.rs  module_list.rs  registry.rs
app/src/plugins/: app.rs  client.rs  mod.rs  registrar.rs  registry.rs
app/src/utils/: align.rs  dpi.rs  mod.rs  signal_holder.rs
app/src/widgets/: app.rs  app_window.rs  mod.rs  page_about.rs  page_games.rs  page_plugins.rs  page_settings.rs  settings_window.rs
app/src/widgets/application/: imp.rs  mod.rs
app/src/widgets/models/: game.rs  mod.rs  plugin.rs  setting.rs
app/src/widgets/plugin/: imp.rs  mod.rs
plugins/core/: Cargo.toml  build.rs
plugins/core/src/: lib.rs  prelude.rs
plugins/dummy/: Cargo.toml
plugins/dummy/src/: lib.rs
plugins/epic/: Cargo.toml  build.rs
plugins/epic/resources/: resources.gresource.xml
plugins/epic/resources/templates/: account.blp  settings.blp
plugins/epic/src/: config.rs  lib.rs  plugin.rs  user.rs
plugins/epic/src/ui/: account.rs  mod.rs  settings.rs
plugins/epic/src/web/: client.rs  client_authed.rs  credentials.rs  decorate.rs  error.rs  hostname.rs  mod.rs  request.rs
plugins/epic/src/web/responses/: get_account.rs  get_account_external_auths.rs  get_accounts.rs  get_assets.rs  get_blocked_users.rs  get_blog_posts.rs  get_catalog_items.rs  get_csrf_token.rs  get_currencies.rs  get_default_billing_account.rs  get_device_auths.rs  get_download_info.rs  get_entitlements.rs  get_exchange_code.rs  get_external_source_settings.rs  get_friends.rs  get_friends_requested.rs  get_friends_suggested.rs  get_friends_summary.rs  get_launcher_download_info.rs  get_lightswitch_status.rs  get_page_info.rs  get_statuspage_summary.rs  mod.rs  oauth_token.rs  query_profile.rs
plugins/test/: Cargo.toml
