[package]
name = "l4"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "L4.exe"
ProductName = "L4"
FileDescription = "Launcher v4 or something"
LegalCopyright = "Copyright © 2023, Asriel Camora"
CompanyName = "WorkingRobot"

[dependencies]
libloading = "*"
plugins_core = { path = "../plugins/core" }
adw = { package = "libadwaita", version = "0.3.1"}
gtk = { package = "gtk4", version = "0.6.4", features = ["v4_10", "blueprint"] }
gdk4-win32 = "*"
windows = { version = "*", features = ["Win32_UI_HiDpi", "Win32_Foundation"] }
once_cell = "*"
static_assertions = "*"
fs2 = "*"
superslice = "*"
semver = "*"
ntapi = "*"
winapi = { version = "*", features = ["std"] }

[build-dependencies]
embed-manifest = "*"
winres = "*"
build-scripts = { path = "build" }