[package]
name = "l4"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "L4.exe"
ProductName = "L4"
FileDescription = "Launcher v4 or something"
LegalCopyright = "Copyright © 2023, Asriel Camora"
CompanyName = "WorkingRobot"

[dependencies]
deps = { path = "../deps" }
gtk = { package = "gtk4", version = "0.6", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.4", features = ["v1_2"] }
plugins_core = { path = "../plugins/core" }
once_cell = "*"
tokio = "*"

[build-dependencies]
embed-manifest = "*"
winres = "*"
build-scripts = { path = "../build" }