[package]
name = "plugins_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "*"
toml = "*"
tokio = {version = "*", features = ["full"]}
async-trait = "*"
generator = "*"

[build-dependencies]
rustc_version = "*"