[package]
name = "plugins_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "*"
toml = "*"
tokio = {version = "*", features = ["full"]}
async-trait = "*"
generator = "*"
gtk = { package = "gtk4", version = "0.6.6", features = ["v4_10"] }

[build-dependencies]
rustc_version = "*"
