[package]
name = "plugins_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = "*"
toml = "*"
tokio = {version = "*", features = ["full"]}
async-trait = "*"
gtk = { package = "gtk4", version = "0.6", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.4", features = ["v1_2"] }
static_assertions = "*"