[package]
name = "plugins_epic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugins_core = { path = "../core" }
deps = { path = "../../deps" }
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde-enum-str = "*"
rand = "*"
serde_json = "*"
tokio = "*"
fragile = "*"
once_cell = "*"

[build-dependencies]
build-scripts = { path = "../../build" }
